--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,8 +7,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="dist/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="dist/assets/icons/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css" />
   <link rel="manifest" href="/manifest.json">
